fix alignment of navigation in header
git-svn-id: svn://svn.totalactivemedia.nl/beeldgeluid@18611 a5e0a7a9-93bf-8f48-8ca9-7e8460674ce7

--- a/sites/all/themes/beeldgeluid/css/layout-fixed.css
+++ b/sites/all/themes/beeldgeluid/css/layout-fixed.css
@@ -53,8 +53,8 @@ html, body {
 #header .section {
   margin-left: auto;
   margin-right: auto;
-  width: 940px;
-  padding: 12px 0 0 0;
+  width: 960px;
+  height: 80px;
 }
 
 #header .region-header {
@@ -62,6 +62,7 @@ html, body {
   clear: none;
   margin: 0;
   width: 720px;
+  height: 80px;
   position: relative;
 }
 
