--- a/sites/all/themes/beeldgeluid/css/pages.css
+++ b/sites/all/themes/beeldgeluid/css/pages.css
@@ -53,7 +53,7 @@ body.page-node-embed {
 
 #logo /* Wrapping link for logo */ {
   float: left; /* LTR */
-  margin: 0;
+  margin: 20px 0 0 30px;
   padding: 0;
   text-decoration: none;
 }
